<resources>
    <string name="app_name">飞机大战</string>
    <string name="number">你的分数为：</string>
    <string name="restart">开始游戏</string>
    <string name="revive">复活</string>
    <string name="save">保存</string>
    <string name="quit">退出</string>
    <string name="select">查看排行</string>
    <string name="username">请输入你的名字</string>
    <string name="randomName">帮我想一个</string>
    <string name="submit">确认</string>
    <string name="ranking">排名</string>
    <string name="ranking_number">分数</string>
    <string name="ranking_username">名字</string>
    <string name="unknown_user">未知用户</string>
    <string name="username_is_long">用户名过长，请重新输入</string>
    <string name="save_successfully">保存成功</string>
    <string name="repeat_is_operation">请勿重复操作</string>
    <string name="quit_game">再按一次退出游戏</string>
    <string name="destroy_enemy_plane">分数:</string>
    <string name="timer">00:00:00:00</string>
    <string name="continue_game">继续游戏</string>
    <string name="start_game">请开始游戏</string>
</resources>