<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register">


    <LinearLayout
        android:id="@+id/startRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_game_ic"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="@drawable/game_over" />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:text="@string/number"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/buttonRestart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:background="#b3b3b3"
            android:minHeight="20dp"
            android:gravity="center"
            android:text="@string/restart"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/buttonRevive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:background="@color/back"
            android:gravity="center"
            android:minHeight="20dp"
            android:text="@string/revive"
            android:textSize="15sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:background="#b3b3b3"
            android:gravity="center"
            android:minHeight="20dp"
            android:text="@string/save"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/buttonSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autoSizeTextType="uniform"
            android:background="#b3b3b3"
            android:gravity="center"
            android:minHeight="20dp"
            android:text="@string/select"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/buttonQuit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:autoSizeTextType="uniform"
            android:background="#b3b3b3"
            android:gravity="center"
            android:minHeight="20dp"
            android:text="@string/quit"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>