<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register">


    <LinearLayout
        android:id="@+id/startRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="75dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/Continue"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#b3b3b3"
            android:text="@string/continue_game"
            android:textSize="20sp" />

        <Button
            android:id="@+id/restart"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="50dp"
            android:background="#b3b3b3"
            android:text="@string/restart"
            android:textSize="20sp" />

        <Button
            android:id="@+id/quit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#b3b3b3"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/quit"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>